--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
         <!-- built files will be auto injected -->
     </body>
 </html>
+<script src="./dist/vendor-dll-js/vendor.dll.js"></script>
